Fix for the layout problems in IE6/7
git-svn-id: file:///svn/repos/irm/oldirm/trunk@153 b5457960-717b-4ecf-ba2b-2af3bec011a1

--- a/styles/default.css
+++ b/styles/default.css
@@ -5,6 +5,7 @@ body {
 	background-color: #ffffff;
 	margin:10px 10px 0px 10px;
 	padding:0px;
+
 }
 
 #main {
@@ -19,6 +20,7 @@ body {
 	border: 2px;
 	border-color: black;
 	position: absolute;
+
 	left:10px;
 	top:75px;
 	width:200px;
@@ -39,38 +41,13 @@ body {
 	-moz-border-radius: 8px;
 	border: 1px;
 	background:#fff;
-	margin-left: 199px;
-	/*
-	IE5x PC mis-implements the box model. Because of that we sometimes have
-	to perform a little CSS trickery to get pixel-perfect display across browsers.
-	The following bit of code was proposed by Tantek Celik, and it preys upon a CSS
-	parsing bug in IE5x PC that will prematurly close a style rule when it runs
-	into the string "\"}\"". After that string appears in a rule, then, we can override
-	previously set attribute values and only browsers without the parse bug will
-	recognize the new values. So any of the name-value pairs above this comment
-	that we need to override for browsers with correct box-model implementations
-	will be listed below.
-		
-	We use the voice-family property because it is likely to be used very infrequently,
-	and where it is used it will be set on the body tag. So the second voice-family value 
-	of "inherit" will override our bogus "\"}\"" value and allow the proper value to
-	cascade down from the body tag.
+	position: absolute;
+	left: 199px;
+	top: 75px;
+	
 
-	The style rule immediately following this rule offers another chance for CSS2
-	aware browsers to pick up the values meant for correct box-model implementations.
-	It uses a CSS2 selector that will be ignored by IE5x PC.
-		
-	Read more at http://www.glish.com/css/hacks.asp
-	*/
-		
-	voice-family: "\"}\"";
-	voice-family: inherit;
-	margin-left: 201px;
 }
 
-html>body #centercontent {
-	margin-left: 201px;
-}
 
 #banner {
 	background:#fff;
@@ -123,6 +100,8 @@ table
 	border-color: black;
 	width: 100%;
 	border-style: none;
+	top: 0;
+	left: 0;
 }
 
 th   
@@ -133,6 +112,7 @@ th
 	font-size: 10pt; 
 	font-weight: bold;
 	background-color: #D3DCE3;
+
 }
 
 
